Upgrade wizard base changes

--- a/war/src/main/less/pluginSetupWizard.less
+++ b/war/src/main/less/pluginSetupWizard.less
@@ -2,6 +2,11 @@
 @import (css) '../css/icons/icomoon.css';
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,300,500,900,700);
 
+.bootstrap-3 * {
+    // simple reset
+    margin: initial;
+    padding: initial;
+}
 
 .plugin-setup-wizard() {
     position: fixed;
