--- a/war/src/main/js/templates/upgradeSuccessPanel.hbs
+++ b/war/src/main/js/templates/upgradeSuccessPanel.hbs
@@ -1,26 +1,20 @@
 <div class="modal-header">
-	<h4 class="modal-title">{{translations.installWizard_pluginsInstalled_title}}</h4>
+	<h4 class="modal-title">{{translations.installWizard_upgradeComplete_title}}</h4>
 </div>
 <div class="modal-body">
 	<div class="jumbotron welcome-panel success-panel">
 		<h1>{{translations.installWizard_pluginsInstalled_banner}}</h1>
 
 		{{#if restartRequired}}
-		<p>{{translations.installWizard_installComplete_message}} {{translations.installWizard_installComplete_restartRequiredMessage}}</p>
+		<p>{{{translations.installWizard_upgradeComplete_message}}} {{translations.installWizard_installComplete_restartRequiredMessage}}</p>
 		<button type="button" class="btn btn-primary install-done-restart">
 			{{translations.installWizard_installComplete_restartLabel}}
 		</button>
 		{{else}}
-		<p>{{translations.installWizard_installComplete_message}}</p>
+		<p>{{{translations.installWizard_upgradeComplete_message}}}</p>
 		<button type="button" class="btn btn-primary install-done">
 			{{translations.installWizard_installComplete_finishButtonLabel}}
 		</button>
 		{{/if}}
-	</div>
-
-	<div class="selected-plugin-progress success-panel">
-		{{#each installingPlugins}}
-		<div class="selected-plugin {{installStatus}}" data-name="{{id name}}">{{title}}</div>
-		{{/each}}
 	</div>
 </div>
