--- a/war/src/main/js/templates/upgradeTo20Panel.hbs
+++ b/war/src/main/js/templates/upgradeTo20Panel.hbs
@@ -1,18 +1,18 @@
 <div class="modal-header">
-	<h4 class="modal-title">{{translations.setupWizard_upgradePanel_title}}</h4>
+	<h4 class="modal-title">{{translations.installWizard_upgradePanel_title}}</h4>
 </div>
 <div class="modal-body">
   <i class="water-mark icon-service"></i>
   <div class="jumbotron welcome-panel upgrade-panel">
-		 <h1>{{translations.setupWizard_upgradePanel_banner}}</h1>
+		 <h1>{{translations.installWizard_upgradePanel_banner}}</h1>
 	   <p>
-			{{translations.setupWizard_upgradePanel_message}}
+			{{translations.installWizard_upgradePanel_message}}
 		</p>
 		<p class="button-set">
 			<a class="btn btn-primary btn-lg btn-huge install-recommended" href="#" role="button">
-				<b>{{translations.setupWizard_upgradePanel_recommendedActionTitle}}</b>
+				<b>{{translations.installWizard_upgradePanel_recommendedActionTitle}}</b>
 				<sub>
-					{{translations.setupWizard_upgradePanel_recommendedActionDetails}}
+					{{translations.installWizard_upgradePanel_recommendedActionDetails}}
 				</sub>
 				<i class="icon icon-signup"></i>
 			</a>
@@ -20,7 +20,7 @@
 	</div>
 </div>
 <div class="modal-footer">
-    <button type="button" class="btn btn-link skip-recommended-plugins" disabled>
-        {{translations.setupWizard_upgradePanel_skipRecommendedPlugins}}
+    <button type="button" class="btn btn-link skip-recommended-plugins">
+        {{translations.installWizard_upgradePanel_skipRecommendedPlugins}}
     </button>
 </div>
