Address upgrade wizard issues: add close button, change text, install specific plugins vs. initial recommended set

--- a/war/src/main/js/templates/upgradeTo20Panel.hbs
+++ b/war/src/main/js/templates/upgradeTo20Panel.hbs
@@ -1,4 +1,4 @@
-<div class="modal-header">
+<div class="modal-header closeable">
 	<h4 class="modal-title">{{translations.installWizard_upgradePanel_title}}</h4>
 </div>
 <div class="modal-body">
@@ -9,7 +9,7 @@
 			{{translations.installWizard_upgradePanel_message}}
 		</p>
 		<p class="button-set">
-			<a class="btn btn-primary btn-lg btn-huge install-recommended" href="#" role="button">
+			<a class="btn btn-primary btn-lg btn-huge perform-upgrade" href="#" role="button">
 				<b>{{translations.installWizard_upgradePanel_recommendedActionTitle}}</b>
 				<sub>
 					{{translations.installWizard_upgradePanel_recommendedActionDetails}}
