Fix issue with plugin install tracking

--- a/war/src/main/js/templates/upgradeTo20Panel.hbs
+++ b/war/src/main/js/templates/upgradeTo20Panel.hbs
@@ -8,19 +8,13 @@
 	   <p>
 			{{translations.installWizard_upgradePanel_message}}
 		</p>
-		<p class="button-set">
-			<a class="btn btn-primary btn-lg btn-huge perform-upgrade" href="#" role="button">
-				<b>{{translations.installWizard_upgradePanel_recommendedActionTitle}}</b>
-				<sub>
-					{{translations.installWizard_upgradePanel_recommendedActionDetails}}
-				</sub>
-				<i class="icon icon-signup"></i>
-			</a>
-		</p>
 	</div>
 </div>
 <div class="modal-footer">
     <button type="button" class="btn btn-link skip-recommended-plugins">
         {{translations.installWizard_upgradePanel_skipRecommendedPlugins}}
+    </button>
+    <button type="button" class="btn btn-primary install-selected">
+        {{translations.installWizard_continue}}
     </button>
 </div>
