--- a/war/src/main/js/templates/upgradeTo20Panel.hbs
+++ b/war/src/main/js/templates/upgradeTo20Panel.hbs
@@ -14,7 +14,7 @@
     <button type="button" class="btn btn-link skip-recommended-plugins">
         {{translations.installWizard_upgradePanel_skipRecommendedPlugins}}
     </button>
-    <button type="button" class="btn btn-primary install-selected">
+    <button type="button" class="btn btn-primary install-custom">
         {{translations.installWizard_continue}}
     </button>
 </div>
